# cc_projects

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  INTERACTIVE_TEMPLATE_CREATION_SUMMARY.md  README.md  main.py  new-project.py  pyproject.toml
.claude/: settings.json
.claude/agents/: framework-researcher.md  python-framework-advisor.md  template-creator.md  template-validator.md  template-wizard.md
.claude/commands/: add-agent.md  add-command.md  commit-msg.md  create-template.md  list-templates.md  update-template.md  validate-template.md
.claude/skills/template-blueprints/: SKILL.md  common-agents.json  common-commands.json  reference.md
django-scrapy-template/: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  conftest.py  docker-compose.yml  manage.py  pyproject.toml  scrapy.cfg
django-scrapy-template/.claude/: settings.json
django-scrapy-template/.claude/agents/: data-modeler.md  django-scrapy-expert.md  orm-optimizer.md  spider-builder.md  test-writer.md
django-scrapy-template/.claude/commands/: api-docs.md  data-export.md  lint.md  makemigrations.md  migrate.md  runserver.md  scrape-schedule.md  shell.md  spider-create.md  spider-run.md  test.md
django-scrapy-template/.claude/skills/api-filter-builder/: SKILL.md  reference.md
django-scrapy-template/.claude/skills/scrapy-django-pipeline/: SKILL.md  reference.md
django-scrapy-template/.claude/skills/tracker-data-model/: SKILL.md  reference.md
django-scrapy-template/apps/core/: models.py
django-scrapy-template/apps/scraper/: tasks.py
django-scrapy-template/apps/scraper/management/commands/: run_spider.py
django-scrapy-template/apps/tracker/: admin.py  filters.py  models.py  serializers.py  urls.py  viewsets.py
django-scrapy-template/apps/tracker/migrations/: 0001_initial.py
django-scrapy-template/apps/tracker/tests/: factories.py  test_api.py  test_models.py  test_pipelines.py
django-scrapy-template/config/: __init__.py  celery.py  urls.py
django-scrapy-template/config/settings/: base.py  development.py  production.py
django-scrapy-template/scrapy_spiders/: items.py  loaders.py  middlewares.py  pipelines.py  settings.py
django-scrapy-template/scrapy_spiders/spiders/: congress_votes.py  opensecrets.py  votesmart.py  wikipedia_bio.py
django-scrapy-template/templates/: base.html
django-template/: .env.example  .gitignore  CLAUDE.md  README.md  requirements.txt  setup_instructions.md
django-template/.claude/: settings.json
django-template/.claude/agents/: django-security.md  drf-expert.md  migration-helper.md  orm-optimizer.md  test-writer.md
django-template/.claude/commands/: check.md  collectstatic.md  create-app.md  create-model.md  makemigrations.md  migrate.md  runserver.md  shell.md  showmigrations.md  test.md
flask-template/.claude/: settings.json
jupyter-ml-template/: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  setup_instructions.md
jupyter-ml-template/.claude/: settings.json
jupyter-ml-template/.claude/agents/: eda-specialist.md  experiment-tracker.md  feature-engineer.md  ml-debugger.md  model-optimizer.md  notebook-reviewer.md
jupyter-ml-template/.claude/commands/: check-quality.md  create-notebook.md  evaluate-model.md  format-code.md  install-deps.md  preprocess-data.md  profile-notebook.md  run-notebook.md  start-jupyter.md  test-notebook.md  track-experiment.md  train-model.md
jupyter-ml-template/.claude/skills/data-validation/: SKILL.md
jupyter-ml-template/.claude/skills/ml-pipeline/: SKILL.md
jupyter-ml-template/.claude/skills/model-deployment/: SKILL.md
jupyter-ml-template/.claude/skills/notebook-templates/: SKILL.md
jupyter-ml-template/data/: README.md
jupyter-ml-template/models/: README.md
jupyter-ml-template/src/data/: loaders.py  preprocessors.py
jupyter-ml-template/src/models/: train.py
jupyter-ml-template/src/utils/: helpers.py
jupyter-ml-template/src/visualization/: plots.py
local-llm-chat/: .env.example  .gitignore  CLAUDE.md  README.md  requirements-dev.txt  requirements.txt
local-llm-chat/.claude/: settings.json
local-llm-chat/.claude/agents/: api-designer.md  finetuning-advisor.md  hf-hub-expert.md  model-optimizer.md  streaming-architect.md
local-llm-chat/.claude/commands/: check-gpu.md  download-model.md  fine-tune.md  merge-lora.md  monitor-training.md  push-to-hub.md  run-inference.md  run-server.md  test-api.md  test-chat.md
local-llm-chat/app/: main.py
local-llm-chat/app/api/: health.py  models.py
local-llm-chat/app/core/: config.py  gpu_utils.py
local-llm-chat/configs/: llama_qlora.yaml  mistral_lora.yaml  phi_lora.yaml
local-llm-chat/notebooks/: explore_model.ipynb
local-llm-chat/static/: index.html
local-llm-chat/tests/: test_api.py  test_streaming.py
local-llm-chat/training/: callbacks.py  config.py  dataset.py  train.py
react-template/: .env.example  .eslintrc.cjs  .gitignore  CLAUDE.md  README.md  package.json  setup_instructions.md  tsconfig.json  vite.config.ts  vitest.config.ts
react-template/.claude/: settings.json
scrapy-template/.claude/: settings.json
streamlit-template/: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup_instructions.md
streamlit-template/.claude/: settings.json
streamlit-template/.claude/agents/: api-integrator.md  data-viz-optimizer.md  database-architect.md  security-reviewer.md  streamlit-expert.md  test-generator.md
streamlit-template/.claude/commands/: build.md  check.md  create-component.md  create-model.md  create-page.md  db-migrate.md  db-upgrade.md  format.md  lint.md  run.md  test.md  typecheck.md
streamlit-template/.claude/skills/auth-system/: SKILL.md
streamlit-template/.claude/skills/caching-optimizer/: SKILL.md
streamlit-template/.claude/skills/database-operations/: SKILL.md
streamlit-template/.claude/skills/streamlit-patterns/: SKILL.md
streamlit-template/.streamlit/: config.toml  secrets.toml.example
streamlit-template/app/core/: config.py  database.py
(+33 files in other folders)
